fix overflow hidden on custom element

--- a/_sass/hydejack/^base.scss
+++ b/_sass/hydejack/^base.scss
@@ -7,6 +7,7 @@
 // <<<<< LINK
 body, hy-push-state {
   /* Prevent side-scrolling on mobile */
+  display: block;
   position: relative;
   overflow-x: hidden;
 }
