--- a/_sass/hydejack/__link/base.scss
+++ b/_sass/hydejack/__link/base.scss
@@ -18,6 +18,7 @@
 
 body, hy-push-state {
   /* Prevent side-scrolling on mobile */
+  display: block;
   position: relative;
   overflow-x: hidden;
 }
